// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`event router — full fixture replays (mutation sequence snapshots) > abort-during-tool: abort mid-tool-phase, orphan result after agent_end 1`] = `
[
  [
    "agentStart",
  ],
  [
    "setAgentStatus",
    {
      "agentStartedAt": 1770000000000,
      "isStreaming": true,
    },
  ],
  [
    "beginAssistantTurn",
    "a-1",
  ],
  [
    "beginToolCall",
    "a-1",
    {
      "arguments": {},
      "id": "call_ab_1",
      "name": "write",
      "type": "toolCall",
    },
  ],
  [
    "appendToolCallArgs",
    "a-1",
    "call_ab_1",
    "{"path":"/tmp/abort/x.html","content":"",
  ],
  [
    "artifactCandidate",
    {
      "kind": "file",
      "op": "write",
      "path": "/tmp/abort/x.html",
      "toolCallId": "call_ab_1",
      "toolName": "write",
    },
  ],
  [
    "appendToolCallArgs",
    "a-1",
    "call_ab_1",
    "partial content tha",
  ],
  [
    "endTurn",
    "a-1",
    "aborted",
    {
      "api": "openai-completions",
      "content": [
        {
          "arguments": {
            "content": "partial content tha",
            "path": "/tmp/abort/x.html",
          },
          "id": "call_ab_1",
          "name": "write",
          "type": "toolCall",
        },
      ],
      "errorMessage": "aborted by user",
      "model": "qwen3.6-27b",
      "provider": "llamacpp",
      "role": "assistant",
      "stopReason": "aborted",
      "timestamp": 1770000040000,
      "usage": {
        "cacheRead": 0,
        "cacheWrite": 0,
        "cost": {
          "cacheRead": 0,
          "cacheWrite": 0,
          "input": 0,
          "output": 0,
          "total": 0,
        },
        "input": 9,
        "output": 14,
        "totalTokens": 23,
      },
    },
  ],
  [
    "agentEnd",
  ],
  [
    "setAgentStatus",
    {
      "agentStartedAt": null,
      "isStreaming": false,
    },
  ],
  [
    "upsertToolResult",
    {
      "id": "tr-call_ab_1",
      "isError": true,
      "kind": "toolResult",
      "text": "write aborted",
      "timestamp": 1770000000000,
      "toolCallId": "call_ab_1",
      "toolName": "write",
    },
  ],
]
`;

exports[`event router — full fixture replays (mutation sequence snapshots) > edge-cases/abort: aborted turn still finalizes cleanly 1`] = `
[
  [
    "agentStart",
  ],
  [
    "setAgentStatus",
    {
      "agentStartedAt": 1770000000000,
      "isStreaming": true,
    },
  ],
  [
    "beginAssistantTurn",
    "a-1",
  ],
  [
    "appendTextDelta",
    "a-1",
    "Let me think about th",
  ],
  [
    "endTurn",
    "a-1",
    "aborted",
    {
      "api": "openai-completions",
      "content": [
        {
          "text": "Let me think about th",
          "type": "text",
        },
      ],
      "errorMessage": "aborted by user",
      "model": "qwen3.6-27b",
      "provider": "llamacpp",
      "role": "assistant",
      "stopReason": "aborted",
      "timestamp": 1770000013000,
      "usage": {
        "cacheRead": 0,
        "cacheWrite": 0,
        "cost": {
          "cacheRead": 0,
          "cacheWrite": 0,
          "input": 0,
          "output": 0,
          "total": 0,
        },
        "input": 12,
        "output": 6,
        "totalTokens": 18,
      },
    },
  ],
  [
    "agentEnd",
  ],
  [
    "setAgentStatus",
    {
      "agentStartedAt": null,
      "isStreaming": false,
    },
  ],
]
`;

exports[`event router — full fixture replays (mutation sequence snapshots) > edge-cases/confirm: dialog, notify policy, ghost + legacy tool calls 1`] = `
[
  [
    "agentStart",
  ],
  [
    "setAgentStatus",
    {
      "agentStartedAt": 1770000000000,
      "isStreaming": true,
    },
  ],
  [
    "beginAssistantTurn",
    "a-1",
  ],
  [
    "appendTextDelta",
    "a-1",
    "Requesting permission before cleanup…",
  ],
  [
    "uiRequest",
    {
      "id": "ui-confirm-1",
      "message": "About to run: rm -rf /tmp/demo/scratch",
      "method": "confirm",
      "options": undefined,
      "placeholder": undefined,
      "prefill": undefined,
      "timeout": 30000,
      "title": "Run dangerous command?",
    },
  ],
  [
    "notify",
    "error",
    "Simulated extension failure",
  ],
  [
    "setExtensionStatus",
    "harness",
    "reviewer mode armed",
  ],
  [
    "setWidget",
    "harness",
    [
      "--- harness ---",
      "permission: granted",
    ],
    "aboveEditor",
  ],
  [
    "beginToolCall",
    "a-1",
    {
      "arguments": {
        "command": "rm -rf /tmp/demo/scratch",
      },
      "id": "call_ghost_1",
      "name": "bash",
      "type": "toolCall",
    },
  ],
  [
    "toolExecutionStart",
    "call_ghost_1",
    "bash",
    {
      "command": "rm -rf /tmp/demo/scratch",
    },
  ],
  [
    "upsertToolResult",
    {
      "assistantId": "a-1",
      "id": "tr-a-1-call_ghost_1",
      "isError": false,
      "kind": "toolResult",
      "text": "removed /tmp/demo/scratch",
      "timestamp": 1770000000000,
      "toolCallId": "call_ghost_1",
      "toolName": "bash",
    },
  ],
  [
    "beginToolCall",
    "a-1",
    {
      "arguments": {},
      "id": "call_legacy_1",
      "name": "write",
      "type": "toolCall",
    },
  ],
  [
    "appendToolCallArgs",
    "a-1",
    "call_legacy_1",
    "{"path":"/tmp/demo/out.txt",",
  ],
  [
    "artifactCandidate",
    {
      "kind": "file",
      "op": "write",
      "path": "/tmp/demo/out.txt",
      "toolCallId": "call_legacy_1",
      "toolName": "write",
    },
  ],
  [
    "appendToolCallArgs",
    "a-1",
    "call_legacy_1",
    ""content":"hi"}",
  ],
  [
    "artifactCandidate",
    {
      "kind": "file",
      "op": "write",
      "path": "/tmp/demo/out.txt",
      "toolCallId": "call_legacy_1",
      "toolName": "write",
    },
  ],
  [
    "toolExecutionStart",
    "call_legacy_1",
    "write",
    {
      "content": "hi",
      "path": "/tmp/demo/out.txt",
    },
  ],
  [
    "upsertToolResult",
    {
      "assistantId": "a-1",
      "id": "tr-a-1-call_legacy_1",
      "isError": false,
      "kind": "toolResult",
      "text": "Wrote /tmp/demo/out.txt",
      "timestamp": 1770000000000,
      "toolCallId": "call_legacy_1",
      "toolName": "write",
    },
  ],
  [
    "endTurn",
    "a-1",
    "toolUse",
    {
      "api": "openai-completions",
      "content": [
        {
          "text": "Requesting permission before cleanup…",
          "type": "text",
        },
      ],
      "model": "qwen3.6-27b",
      "provider": "llamacpp",
      "role": "assistant",
      "stopReason": "toolUse",
      "timestamp": 1770000011000,
      "usage": {
        "cacheRead": 0,
        "cacheWrite": 0,
        "cost": {
          "cacheRead": 0,
          "cacheWrite": 0,
          "input": 0,
          "output": 0,
          "total": 0,
        },
        "input": 50,
        "output": 40,
        "totalTokens": 90,
      },
    },
  ],
  [
    "upsertToolResult",
    {
      "assistantId": "a-1",
      "id": "tr-a-1-call_ghost_1",
      "isError": false,
      "kind": "toolResult",
      "text": "removed /tmp/demo/scratch",
      "timestamp": 1770000011100,
      "toolCallId": "call_ghost_1",
      "toolName": "bash",
    },
  ],
  [
    "upsertToolResult",
    {
      "assistantId": "a-1",
      "id": "tr-a-1-call_legacy_1",
      "isError": false,
      "kind": "toolResult",
      "text": "Wrote /tmp/demo/out.txt",
      "timestamp": 1770000011200,
      "toolCallId": "call_legacy_1",
      "toolName": "write",
    },
  ],
  [
    "beginToolCall",
    "a-1",
    {
      "arguments": {
        "path": "/tmp/demo/out.txt",
      },
      "id": "call_ghost_2",
      "name": "read",
      "type": "toolCall",
    },
  ],
  [
    "upsertToolResult",
    {
      "assistantId": "a-1",
      "id": "tr-a-1-call_ghost_2",
      "isError": false,
      "kind": "toolResult",
      "text": "hi",
      "timestamp": 1770000011300,
      "toolCallId": "call_ghost_2",
      "toolName": "read",
    },
  ],
  [
    "beginAssistantTurn",
    "a-2",
  ],
  [
    "appendTextDelta",
    "a-2",
    "All cleaned up.",
  ],
  [
    "endTurn",
    "a-2",
    "stop",
    {
      "api": "openai-completions",
      "content": [
        {
          "text": "All cleaned up.",
          "type": "text",
        },
      ],
      "model": "qwen3.6-27b",
      "provider": "llamacpp",
      "role": "assistant",
      "stopReason": "stop",
      "timestamp": 1770000012000,
      "usage": {
        "cacheRead": 0,
        "cacheWrite": 0,
        "cost": {
          "cacheRead": 0,
          "cacheWrite": 0,
          "input": 0,
          "output": 0,
          "total": 0,
        },
        "input": 90,
        "output": 5,
        "totalTokens": 95,
      },
    },
  ],
  [
    "agentEnd",
  ],
  [
    "setAgentStatus",
    {
      "agentStartedAt": null,
      "isStreaming": false,
    },
  ],
]
`;

exports[`event router — full fixture replays (mutation sequence snapshots) > edge-cases/think: thinking deltas + huge unicode text block 1`] = `
[
  [
    "agentStart",
  ],
  [
    "setAgentStatus",
    {
      "agentStartedAt": 1770000000000,
      "isStreaming": true,
    },
  ],
  [
    "beginAssistantTurn",
    "a-1",
  ],
  [
    "appendThinkingDelta",
    "a-1",
    "The user wants a stress test.",
  ],
  [
    "appendThinkingDelta",
    "a-1",
    " Unicode torture: line A line B line C — 中文測試 · עִבְרִית · 🎛️.",
  ],
  [
    "appendTextDelta",
    "a-1",
    "Here comes a big block:
",
  ],
  [
    "appendTextDelta",
    "a-1",
    "All work and no play makes pi a dull agent. All work and no play makes pi a dull agent. All work and no play makes pi a …<len=17600>",
  ],
  [
    "endTurn",
    "a-1",
    "stop",
    {
      "api": "openai-completions",
      "content": [
        {
          "thinking": "The user wants a stress test. (…)",
          "type": "thinking",
        },
        {
          "text": "All work and no play makes pi a dull agent. All work and no play makes pi a dull agent. All work and no play makes pi a …<len=17600>",
          "type": "text",
        },
      ],
      "model": "qwen3.6-27b",
      "provider": "llamacpp",
      "role": "assistant",
      "stopReason": "stop",
      "timestamp": 1770000010000,
      "usage": {
        "cacheRead": 0,
        "cacheWrite": 0,
        "cost": {
          "cacheRead": 0,
          "cacheWrite": 0,
          "input": 0,
          "output": 0,
          "total": 0,
        },
        "input": 10,
        "output": 4000,
        "totalTokens": 4010,
      },
    },
  ],
  [
    "agentEnd",
  ],
  [
    "setAgentStatus",
    {
      "agentStartedAt": null,
      "isStreaming": false,
    },
  ],
]
`;

exports[`event router — full fixture replays (mutation sequence snapshots) > id-reuse: same toolCallId across turns renders every call and result 1`] = `
[
  [
    "agentStart",
  ],
  [
    "setAgentStatus",
    {
      "agentStartedAt": 1770000000000,
      "isStreaming": true,
    },
  ],
  [
    "beginAssistantTurn",
    "a-1",
  ],
  [
    "beginToolCall",
    "a-1",
    {
      "arguments": {},
      "id": "call_0",
      "name": "bash",
      "type": "toolCall",
    },
  ],
  [
    "appendToolCallArgs",
    "a-1",
    "call_0",
    "{"command":"ls"}",
  ],
  [
    "finalizeToolCall",
    "a-1",
    "call_0",
    {
      "arguments": {
        "command": "ls",
      },
      "id": "call_0",
      "name": "bash",
      "type": "toolCall",
    },
  ],
  [
    "toolExecutionStart",
    "call_0",
    "bash",
    {
      "command": "ls",
    },
  ],
  [
    "upsertToolResult",
    {
      "assistantId": "a-1",
      "id": "tr-a-1-call_0",
      "isError": false,
      "kind": "toolResult",
      "text": "run1-turn1 output",
      "timestamp": 1770000000000,
      "toolCallId": "call_0",
      "toolName": "bash",
    },
  ],
  [
    "endTurn",
    "a-1",
    "toolUse",
    {
      "api": "openai-completions",
      "content": [
        {
          "arguments": {
            "command": "ls",
          },
          "id": "call_0",
          "name": "bash",
          "type": "toolCall",
        },
      ],
      "model": "qwen3.6-27b",
      "provider": "llamacpp",
      "role": "assistant",
      "stopReason": "toolUse",
      "timestamp": 1770000030000,
      "usage": {
        "cacheRead": 0,
        "cacheWrite": 0,
        "cost": {
          "cacheRead": 0,
          "cacheWrite": 0,
          "input": 0,
          "output": 0,
          "total": 0,
        },
        "input": 20,
        "output": 10,
        "totalTokens": 30,
      },
    },
  ],
  [
    "upsertToolResult",
    {
      "assistantId": "a-1",
      "id": "tr-a-1-call_0",
      "isError": false,
      "kind": "toolResult",
      "text": "run1-turn1 output",
      "timestamp": 1770000030100,
      "toolCallId": "call_0",
      "toolName": "bash",
    },
  ],
  [
    "beginAssistantTurn",
    "a-2",
  ],
  [
    "beginToolCall",
    "a-2",
    {
      "arguments": {},
      "id": "call_0",
      "name": "bash",
      "type": "toolCall",
    },
  ],
  [
    "appendToolCallArgs",
    "a-2",
    "call_0",
    "{"command":"pwd"}",
  ],
  [
    "beginToolCall",
    "a-2",
    {
      "arguments": {
        "path": "/tmp/reused.txt",
      },
      "id": "tc-3",
      "name": "read",
      "type": "toolCall",
    },
  ],
  [
    "artifactCandidate",
    {
      "kind": "file",
      "op": "read",
      "path": "/tmp/reused.txt",
      "toolCallId": "tc-3",
      "toolName": "read",
    },
  ],
  [
    "toolExecutionStart",
    "call_0",
    "bash",
    {
      "command": "pwd",
    },
  ],
  [
    "upsertToolResult",
    {
      "assistantId": "a-2",
      "id": "tr-a-2-call_0",
      "isError": false,
      "kind": "toolResult",
      "text": "run1-turn2 output",
      "timestamp": 1770000000000,
      "toolCallId": "call_0",
      "toolName": "bash",
    },
  ],
  [
    "endTurn",
    "a-2",
    "toolUse",
    {
      "api": "openai-completions",
      "content": [
        {
          "arguments": {
            "command": "pwd",
          },
          "id": "call_0",
          "name": "bash",
          "type": "toolCall",
        },
      ],
      "model": "qwen3.6-27b",
      "provider": "llamacpp",
      "role": "assistant",
      "stopReason": "toolUse",
      "timestamp": 1770000031000,
      "usage": {
        "cacheRead": 0,
        "cacheWrite": 0,
        "cost": {
          "cacheRead": 0,
          "cacheWrite": 0,
          "input": 0,
          "output": 0,
          "total": 0,
        },
        "input": 40,
        "output": 10,
        "totalTokens": 50,
      },
    },
  ],
  [
    "upsertToolResult",
    {
      "assistantId": "a-2",
      "id": "tr-a-2-call_0",
      "isError": false,
      "kind": "toolResult",
      "text": "run1-turn2 output",
      "timestamp": 1770000031100,
      "toolCallId": "call_0",
      "toolName": "bash",
    },
  ],
  [
    "agentEnd",
  ],
  [
    "setAgentStatus",
    {
      "agentStartedAt": null,
      "isStreaming": false,
    },
  ],
]
`;

exports[`event router — full fixture replays (mutation sequence snapshots) > parallel-tools: two interleaved streams (0.68.1 id-less deltas + >512-char args) 1`] = `
[
  [
    "agentStart",
  ],
  [
    "setAgentStatus",
    {
      "agentStartedAt": 1770000000000,
      "isStreaming": true,
    },
  ],
  [
    "beginAssistantTurn",
    "a-1",
  ],
  [
    "beginToolCall",
    "a-1",
    {
      "arguments": {},
      "id": "call_par_a",
      "name": "write",
      "type": "toolCall",
    },
  ],
  [
    "beginToolCall",
    "a-1",
    {
      "arguments": {},
      "id": "call_par_b",
      "name": "write",
      "type": "toolCall",
    },
  ],
  [
    "appendToolCallArgs",
    "a-1",
    "call_par_a",
    "{"path":"/tmp/par/a.html","content":"",
  ],
  [
    "artifactCandidate",
    {
      "kind": "file",
      "op": "write",
      "path": "/tmp/par/a.html",
      "toolCallId": "call_par_a",
      "toolName": "write",
    },
  ],
  [
    "appendToolCallArgs",
    "a-1",
    "call_par_b",
    "{"path":"/tmp/par/b.html","content":"",
  ],
  [
    "artifactCandidate",
    {
      "kind": "file",
      "op": "write",
      "path": "/tmp/par/b.html",
      "toolCallId": "call_par_b",
      "toolName": "write",
    },
  ],
  [
    "appendToolCallArgs",
    "a-1",
    "call_par_a",
    "AAA"}",
  ],
  [
    "appendToolCallArgs",
    "a-1",
    "call_par_b",
    "012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789…<len=700>",
  ],
  [
    "appendToolCallArgs",
    "a-1",
    "call_par_b",
    ""}",
  ],
  [
    "finalizeToolCall",
    "a-1",
    "call_par_a",
    {
      "arguments": {
        "content": "AAA",
        "path": "/tmp/par/a.html",
      },
      "id": "call_par_a",
      "name": "write",
      "type": "toolCall",
    },
  ],
  [
    "finalizeToolCall",
    "a-1",
    "call_par_b",
    {
      "arguments": {
        "content": "0123456789",
        "path": "/tmp/par/b.html",
      },
      "id": "call_par_b",
      "name": "write",
      "type": "toolCall",
    },
  ],
  [
    "artifactCandidate",
    {
      "kind": "file",
      "op": "write",
      "path": "/tmp/par/a.html",
      "toolCallId": "call_par_a",
      "toolName": "write",
    },
  ],
  [
    "toolExecutionStart",
    "call_par_a",
    "write",
    {
      "content": "AAA",
      "path": "/tmp/par/a.html",
    },
  ],
  [
    "artifactCandidate",
    {
      "kind": "file",
      "op": "write",
      "path": "/tmp/par/b.html",
      "toolCallId": "call_par_b",
      "toolName": "write",
    },
  ],
  [
    "toolExecutionStart",
    "call_par_b",
    "write",
    {
      "content": "0123456789",
      "path": "/tmp/par/b.html",
    },
  ],
  [
    "upsertToolResult",
    {
      "assistantId": "a-1",
      "id": "tr-a-1-call_par_b",
      "isError": false,
      "kind": "toolResult",
      "text": "Wrote /tmp/par/b.html",
      "timestamp": 1770000000000,
      "toolCallId": "call_par_b",
      "toolName": "write",
    },
  ],
  [
    "upsertToolResult",
    {
      "assistantId": "a-1",
      "id": "tr-a-1-call_par_a",
      "isError": false,
      "kind": "toolResult",
      "text": "Wrote /tmp/par/a.html",
      "timestamp": 1770000000000,
      "toolCallId": "call_par_a",
      "toolName": "write",
    },
  ],
  [
    "endTurn",
    "a-1",
    "toolUse",
    {
      "api": "openai-completions",
      "content": [
        {
          "arguments": {
            "content": "AAA",
            "path": "/tmp/par/a.html",
          },
          "id": "call_par_a",
          "name": "write",
          "type": "toolCall",
        },
        {
          "arguments": {
            "content": "0123456789",
            "path": "/tmp/par/b.html",
          },
          "id": "call_par_b",
          "name": "write",
          "type": "toolCall",
        },
      ],
      "model": "qwen3.6-27b",
      "provider": "llamacpp",
      "role": "assistant",
      "stopReason": "toolUse",
      "timestamp": 1770000020000,
      "usage": {
        "cacheRead": 0,
        "cacheWrite": 0,
        "cost": {
          "cacheRead": 0,
          "cacheWrite": 0,
          "input": 0,
          "output": 0,
          "total": 0,
        },
        "input": 30,
        "output": 60,
        "totalTokens": 90,
      },
    },
  ],
  [
    "upsertToolResult",
    {
      "assistantId": "a-1",
      "id": "tr-a-1-call_par_a",
      "isError": false,
      "kind": "toolResult",
      "text": "Wrote /tmp/par/a.html",
      "timestamp": 1770000020100,
      "toolCallId": "call_par_a",
      "toolName": "write",
    },
  ],
  [
    "upsertToolResult",
    {
      "assistantId": "a-1",
      "id": "tr-a-1-call_par_b",
      "isError": false,
      "kind": "toolResult",
      "text": "Wrote /tmp/par/b.html",
      "timestamp": 1770000020200,
      "toolCallId": "call_par_b",
      "toolName": "write",
    },
  ],
  [
    "agentEnd",
  ],
  [
    "setAgentStatus",
    {
      "agentStartedAt": null,
      "isStreaming": false,
    },
  ],
]
`;

exports[`event router — full fixture replays (mutation sequence snapshots) > simple-chat: streamed text turn 1`] = `
[
  [
    "agentStart",
  ],
  [
    "setAgentStatus",
    {
      "agentStartedAt": 1770000000000,
      "isStreaming": true,
    },
  ],
  [
    "beginAssistantTurn",
    "a-1",
  ],
  [
    "appendTextDelta",
    "a-1",
    "Hello",
  ],
  [
    "appendTextDelta",
    "a-1",
    " from mock",
  ],
  [
    "appendTextDelta",
    "a-1",
    "-pi — streaming works.",
  ],
  [
    "endTurn",
    "a-1",
    "stop",
    {
      "api": "openai-completions",
      "content": [
        {
          "text": "Hello from mock-pi — streaming works.",
          "type": "text",
        },
      ],
      "model": "qwen3.6-27b",
      "provider": "llamacpp",
      "role": "assistant",
      "stopReason": "stop",
      "timestamp": 1770000000000,
      "usage": {
        "cacheRead": 0,
        "cacheWrite": 0,
        "cost": {
          "cacheRead": 0,
          "cacheWrite": 0,
          "input": 0,
          "output": 0,
          "total": 0,
        },
        "input": 24,
        "output": 12,
        "totalTokens": 36,
      },
    },
  ],
  [
    "agentEnd",
  ],
  [
    "setAgentStatus",
    {
      "agentStartedAt": null,
      "isStreaming": false,
    },
  ],
]
`;

exports[`event router — full fixture replays (mutation sequence snapshots) > status-stream: queue/compaction/retry/model/session/widget/select coverage 1`] = `
[
  [
    "agentStart",
  ],
  [
    "setAgentStatus",
    {
      "agentStartedAt": 1770000000000,
      "isStreaming": true,
    },
  ],
  [
    "setAgentStatus",
    {
      "pendingMessageCount": 2,
    },
  ],
  [
    "setAgentStatus",
    {
      "isCompacting": true,
    },
  ],
  [
    "setAgentStatus",
    {
      "isCompacting": false,
    },
  ],
  [
    "setAgentStatus",
    {
      "retry": {
        "attempt": 1,
        "maxAttempts": 3,
      },
    },
  ],
  [
    "setAgentStatus",
    {
      "retry": null,
    },
  ],
  [
    "setAgentStatus",
    {
      "model": {
        "id": "gemma4-e4b",
        "name": "Gemma 4 E4B",
        "provider": "llamacpp",
      },
    },
  ],
  [
    "setAgentStatus",
    {
      "thinkingLevel": "high",
    },
  ],
  [
    "sessionChanged",
    {
      "cwd": "/tmp/mock-pi",
      "sessionFile": "/tmp/mock-pi/sessions/status-stream-2.jsonl",
      "sessionId": "mock-session-status-stream-2",
    },
  ],
  [
    "setExtensionStatus",
    "harness",
    "warming up",
  ],
  [
    "setWidget",
    "harness",
    [
      "--- status ---",
      "attempt 1/3",
    ],
    "belowEditor",
  ],
  [
    "setExtensionStatus",
    "harness",
    undefined,
  ],
  [
    "setWidget",
    "harness",
    undefined,
    "aboveEditor",
  ],
  [
    "uiRequest",
    {
      "id": "ui-select-1",
      "message": undefined,
      "method": "select",
      "options": [
        "claude",
        "codex",
      ],
      "placeholder": undefined,
      "prefill": undefined,
      "timeout": 5000,
      "title": "Pick a flavor",
    },
  ],
  [
    "beginAssistantTurn",
    "a-1",
  ],
  [
    "appendTextDelta",
    "a-1",
    "Status stream complete.",
  ],
  [
    "endTurn",
    "a-1",
    "stop",
    {
      "api": "openai-completions",
      "content": [
        {
          "text": "Status stream complete.",
          "type": "text",
        },
      ],
      "model": "gemma4-e4b",
      "provider": "llamacpp",
      "role": "assistant",
      "stopReason": "stop",
      "timestamp": 1770000050000,
      "usage": {
        "cacheRead": 0,
        "cacheWrite": 0,
        "cost": {
          "cacheRead": 0,
          "cacheWrite": 0,
          "input": 0,
          "output": 0,
          "total": 0,
        },
        "input": 25,
        "output": 6,
        "totalTokens": 31,
      },
    },
  ],
  [
    "agentEnd",
  ],
  [
    "setAgentStatus",
    {
      "agentStartedAt": null,
      "isStreaming": false,
    },
  ],
]
`;

exports[`event router — full fixture replays (mutation sequence snapshots) > tool-use: bash + edit with streaming args, executions, results 1`] = `
[
  [
    "agentStart",
  ],
  [
    "setAgentStatus",
    {
      "agentStartedAt": 1770000000000,
      "isStreaming": true,
    },
  ],
  [
    "beginAssistantTurn",
    "a-1",
  ],
  [
    "appendTextDelta",
    "a-1",
    "Let me look around.",
  ],
  [
    "beginToolCall",
    "a-1",
    {
      "arguments": {},
      "id": "call_bash_1",
      "name": "bash",
      "type": "toolCall",
    },
  ],
  [
    "appendToolCallArgs",
    "a-1",
    "call_bash_1",
    "{"command":",
  ],
  [
    "appendToolCallArgs",
    "a-1",
    "call_bash_1",
    ""ls -la /tmp/demo"",
  ],
  [
    "appendToolCallArgs",
    "a-1",
    "call_bash_1",
    "}",
  ],
  [
    "finalizeToolCall",
    "a-1",
    "call_bash_1",
    {
      "arguments": {
        "command": "ls -la /tmp/demo",
      },
      "id": "call_bash_1",
      "name": "bash",
      "type": "toolCall",
    },
  ],
  [
    "toolExecutionStart",
    "call_bash_1",
    "bash",
    {
      "command": "ls -la /tmp/demo",
    },
  ],
  [
    "toolExecutionUpdate",
    "call_bash_1",
    "bash",
    {
      "content": [
        {
          "text": "total 8
",
          "type": "text",
        },
      ],
      "details": {
        "fullOutputPath": null,
        "truncation": null,
      },
    },
  ],
  [
    "upsertToolResult",
    {
      "assistantId": "a-1",
      "id": "tr-a-1-call_bash_1",
      "isError": false,
      "kind": "toolResult",
      "text": "total 8
-rw-r--r--  1 user  staff  6 hello.txt",
      "timestamp": 1770000000000,
      "toolCallId": "call_bash_1",
      "toolName": "bash",
    },
  ],
  [
    "endTurn",
    "a-1",
    "toolUse",
    {
      "api": "openai-completions",
      "content": [
        {
          "text": "Let me look around.",
          "type": "text",
        },
        {
          "arguments": {
            "command": "ls -la /tmp/demo",
          },
          "id": "call_bash_1",
          "name": "bash",
          "type": "toolCall",
        },
      ],
      "model": "qwen3.6-27b",
      "provider": "llamacpp",
      "role": "assistant",
      "stopReason": "toolUse",
      "timestamp": 1770000001000,
      "usage": {
        "cacheRead": 0,
        "cacheWrite": 0,
        "cost": {
          "cacheRead": 0,
          "cacheWrite": 0,
          "input": 0,
          "output": 0,
          "total": 0,
        },
        "input": 40,
        "output": 22,
        "totalTokens": 62,
      },
    },
  ],
  [
    "upsertToolResult",
    {
      "assistantId": "a-1",
      "id": "tr-a-1-call_bash_1",
      "isError": false,
      "kind": "toolResult",
      "text": "total 8
-rw-r--r--  1 user  staff  6 hello.txt",
      "timestamp": 1770000001200,
      "toolCallId": "call_bash_1",
      "toolName": "bash",
    },
  ],
  [
    "beginAssistantTurn",
    "a-2",
  ],
  [
    "beginToolCall",
    "a-2",
    {
      "arguments": {},
      "id": "call_edit_1",
      "name": "edit",
      "type": "toolCall",
    },
  ],
  [
    "appendToolCallArgs",
    "a-2",
    "call_edit_1",
    "{"path":"/tmp/demo/hello.txt",",
  ],
  [
    "artifactCandidate",
    {
      "kind": "file",
      "op": "edit",
      "path": "/tmp/demo/hello.txt",
      "toolCallId": "call_edit_1",
      "toolName": "edit",
    },
  ],
  [
    "appendToolCallArgs",
    "a-2",
    "call_edit_1",
    ""oldText":"Hello",",
  ],
  [
    "appendToolCallArgs",
    "a-2",
    "call_edit_1",
    ""newText":"Hello, world"}",
  ],
  [
    "finalizeToolCall",
    "a-2",
    "call_edit_1",
    {
      "arguments": {
        "newText": "Hello, world",
        "oldText": "Hello",
        "path": "/tmp/demo/hello.txt",
      },
      "id": "call_edit_1",
      "name": "edit",
      "type": "toolCall",
    },
  ],
  [
    "artifactCandidate",
    {
      "kind": "file",
      "op": "edit",
      "path": "/tmp/demo/hello.txt",
      "toolCallId": "call_edit_1",
      "toolName": "edit",
    },
  ],
  [
    "toolExecutionStart",
    "call_edit_1",
    "edit",
    {
      "newText": "Hello, world",
      "oldText": "Hello",
      "path": "/tmp/demo/hello.txt",
    },
  ],
  [
    "upsertToolResult",
    {
      "assistantId": "a-2",
      "id": "tr-a-2-call_edit_1",
      "isError": false,
      "kind": "toolResult",
      "text": "Edited /tmp/demo/hello.txt",
      "timestamp": 1770000000000,
      "toolCallId": "call_edit_1",
      "toolName": "edit",
    },
  ],
  [
    "endTurn",
    "a-2",
    "toolUse",
    {
      "api": "openai-completions",
      "content": [
        {
          "arguments": {
            "newText": "Hello, world",
            "oldText": "Hello",
            "path": "/tmp/demo/hello.txt",
          },
          "id": "call_edit_1",
          "name": "edit",
          "type": "toolCall",
        },
      ],
      "model": "qwen3.6-27b",
      "provider": "llamacpp",
      "role": "assistant",
      "stopReason": "toolUse",
      "timestamp": 1770000002000,
      "usage": {
        "cacheRead": 0,
        "cacheWrite": 0,
        "cost": {
          "cacheRead": 0,
          "cacheWrite": 0,
          "input": 0,
          "output": 0,
          "total": 0,
        },
        "input": 80,
        "output": 30,
        "totalTokens": 110,
      },
    },
  ],
  [
    "upsertToolResult",
    {
      "assistantId": "a-2",
      "id": "tr-a-2-call_edit_1",
      "isError": false,
      "kind": "toolResult",
      "text": "Edited /tmp/demo/hello.txt",
      "timestamp": 1770000002200,
      "toolCallId": "call_edit_1",
      "toolName": "edit",
    },
  ],
  [
    "beginAssistantTurn",
    "a-3",
  ],
  [
    "appendTextDelta",
    "a-3",
    "Done — hello.txt now greets the world.",
  ],
  [
    "endTurn",
    "a-3",
    "stop",
    {
      "api": "openai-completions",
      "content": [
        {
          "text": "Done — hello.txt now greets the world.",
          "type": "text",
        },
      ],
      "model": "qwen3.6-27b",
      "provider": "llamacpp",
      "role": "assistant",
      "stopReason": "stop",
      "timestamp": 1770000003000,
      "usage": {
        "cacheRead": 0,
        "cacheWrite": 0,
        "cost": {
          "cacheRead": 0,
          "cacheWrite": 0,
          "input": 0,
          "output": 0,
          "total": 0,
        },
        "input": 120,
        "output": 12,
        "totalTokens": 132,
      },
    },
  ],
  [
    "agentEnd",
  ],
  [
    "setAgentStatus",
    {
      "agentStartedAt": null,
      "isStreaming": false,
    },
  ],
]
`;
